platform/onepassword-connect/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onepassword-connect
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
